[package]
name = "kvm-ioctls"
version = "0.5.0"
authors = ["Amazon Firecracker Team <firecracker-maintainers@amazon.com>"]
description = "Safe wrappers over KVM ioctls"
repository = "https://github.com/rust-vmm/kvm-ioctls"
readme = "README.md"
keywords = ["kvm"]
license = "Apache-2.0 OR MIT"

[dependencies]
libc = ">=0.2.39"
vmm-sys-util = ">=0.2.1"

[dependencies.kvm-bindings]
git = "https://github.com/cloud-hypervisor/kvm-bindings"
branch = "ch"
features = ["fam-wrappers"]

[dev-dependencies]
byteorder = ">=1.2.1"
